# muro_flash

./: README.md  TEST.text  quadcopter_ekf.cpp  turtlebot_setup.sh
MURO_Website/: index.html  under_construction.html
MURO_Website/AndroidApp/: androidapp.html
MURO_Website/AndroidApp/css/: creative.css  creative.css~  cyclicpursuit.html
MURO_Website/Blog/: blog.html  blog.html~
MURO_Website/Blog/css_blog/: creative.css
MURO_Website/Capabilities/: capabilities.html  capabilities.html~
MURO_Website/Capabilities/css_capabilities/: creative.css
MURO_Website/CoverageControl/: coveragecontrol.html  coveragecontrol.html~
MURO_Website/CoverageControl/css/: creative.css  creative.css~
MURO_Website/CyclicPursuit/: cyclicpursuit.html  cyclicpursuit.html~
MURO_Website/CyclicPursuit/css/: creative.css  creative.css~
MURO_Website/DistributedRobotics/: distributedrobotics.html  distributedrobotics.html~
MURO_Website/DistributedRobotics/css_distributedrobotics/: creative.css
MURO_Website/Documents/: login.html
MURO_Website/Documents/pages/: documents.html~
MURO_Website/Localization/: localization.html~
MURO_Website/Localization/css_localization/: creative.css~
MURO_Website/Onboard/: onboard.html~  slam.html~
MURO_Website/Onboard/css/: creative.css  creative.css~
MURO_Website/Products/: products.html  products.html~
MURO_Website/Products/css_products/: creative.css
MURO_Website/Profiles/: profiles.html
MURO_Website/Profiles/css_profiles/: creative.css
MURO_Website/Quadrotors/: quadrotors.html  quadrotors.html~
MURO_Website/Quadrotors/css/: creative.css  creative.css~
MURO_Website/SLAM/: slam.html
MURO_Website/SLAM/css/: creative.css  creative.css~
MURO_Website/TurtleBots/: turtlebots.html  turtlebots.html~
MURO_Website/TurtleBots/css/: creative.css  creative.css~
MURO_Website/css/: creative.css  creative.css~
coop_localization/: CMakeLists.txt  package.xml
coop_localization/config/: kinect_calib_jonathan.yml
coop_localization/launch/: cl.launch  cl_and_start_webcam.launch
coop_localization/msg/: PoseRelative.msg
coop_localization/src/: exteroceptive_sensor.cpp  name_map.cpp  name_map.h  sensor_fusion.cpp  stuff_not_used_yet.cpp
demo_files/: blind_xbox_demo  blind_xbox_demo_shutdown
deployment/turtlebot_deployment/: CMakeLists.txt  CMakeLists.txt~  package.xml
deployment/turtlebot_deployment/cfg/: pathFollowing.cfg
deployment/turtlebot_deployment/launch/: centroid.launch  centroidK.launch  cyclic.launch  deploy_robot.launch  deploy_robot_amcl.launch  deploy_robot_dubins.launch  deploy_robot_dummy.launch  deploy_robot_nav.launch  deploy_robot_navstack.launch  map_server.launch  map_server.launch~  minimal_3d.launch  minimal_ns.launch  rosUnits.launch
deployment/turtlebot_deployment/maps/: lab_map.yaml  lab_workspace.yaml
deployment/turtlebot_deployment/src/: PathFollowing.cpp  centroidKeyboard.cpp  cyclic_pursuit.cpp  cyclic_pursuit_test.cpp  cyclicpursuit.cpp  dijkstra.cpp  ekf.cpp  formation.cpp  inter_robot_communication.cpp  inter_robot_communication_ekf.cpp  movingCentroid.cpp  rosUnitsMove.cpp  simple_deployment.cpp  simple_deployment.cpp~  simple_deployment_dummy.cpp
deployment/turtlebot_move_to_goal/: CMakeLists.txt
deployment/turtlebot_move_to_goal/launch/: keyboard.launch  turtlebot_move_to_goal_dubins.launch  turtlebot_move_to_goal_dubins.launch~
deployment/turtlebot_move_to_goal/src/: LineFollow.cpp  dubins.h  dubins_curve.cpp  first_turn_then_move.cpp  first_turn_then_move.cpp~  keyboard.cpp  main.cpp
documents/: instructions-for-report.tex
localization-mounted-camera/blueBot/launch/: localization_demo.launch~  localization_demo_multiple.launch~  localization_with_map.launch~
localization-mounted-camera/turtlebot_camera_localization/: CMakeLists.txt
localization-mounted-camera/turtlebot_camera_localization/launch/: localization_demo.launch  tf_broadcaster.launch  usb_cam.launch  usb_cam_launch.launch  uvcCameraLaunch.launch
localization-mounted-camera/turtlebot_camera_localization/maps/: lab_workspace.yaml
localization-mounted-camera/turtlebot_camera_localization/src/: main.cpp
localization-mounted-camera/uvc_camera/: CMakeLists.txt  CMakeLists.txt~
projector/: CMakeLists.txt  package.xml
projector/launch/: projector.launch
projector/src/: projector.cpp
quadcopter/test_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
quadcopter/test_pkg/launch/: Deployment.launch  Deployment.launch~  ekfMultiple.launch  ekfMultiple.launch~  quadcopter_test.launch  slider.launch
quadcopter/test_pkg/msg/: pathData.msg
quadcopter/test_pkg/res/: Output.txt  input.txt  kAnalysis.m  kAnalysis.m~
quadcopter/test_pkg/src/: CoMGenerator.cpp  CoMGenerator.h  CoMGeneratorRos.cpp  CoMGeneratorRos.cpp~  centroidGeneratorRos.cpp  centroidGeneratorRos.cpp~  collisionAvoidance.cpp  collisionAvoidance.cpp~  deserializeForAndroid.cpp  deserializeForAndroid.cpp~  flight.cpp  hover.cpp  movementTest.cpp  path_follower.cpp  path_follower.cpp~  path_follower_test.cpp  path_follower_test_copy.cpp  path_follower_test_sample_input.cpp  pf_test.cpp  quadcopter_ekf.cpp  quadcopter_ekf_multiple.cpp  quadcopter_ekf_multiple.cpp~  rearrangingArrayTest.cpp  sample.cpp  sample.cpp~  slider.cpp  slider_multiple.cpp  slider_multiple.cpp~
(+26 files in other folders)
